# Dorothy-egui

./: .gitignore  Cargo.toml  README.md  build.rs  build_web.bat
.github/workflows/: release.yml  rust.yml
docs/: README.md  dorothy_egui.js  dorothy_egui_bg.js  dorothy_egui_bg.wasm  index.html  manifest.json  sw.js
src/: app.rs  icon.rs  lib.rs  main.rs
