[package]
name = "dorothy"
default-run = "dorothy-egui_bin"
version = "0.0.8"
authors = ["Nadya Nayme <admin@aishitei.ru>"]
edition = "2021"
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "dorothy-egui_bin"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = "0.4"
confy = "0.4.0"
csv = "1.1"
eframe = { version =  "0.17.0", features = ["persistence"] }
image = "0.24.1"
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(target_os = "windows")'.dependencies]
open = "2.1"

[profile.release]
opt-level = 2 # fast and small wasm

[patch.crates-io]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
