[package]
name = "dorothy_egui"
default-run = "dorothy_egui_bin"
version = "0.0.10"
authors = ["Nadya Nayme <admin@aishitei.ru>"]
edition = "2021"
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "dorothy_egui_bin"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
csv = "1.1"
eframe = { path = "./crates/eframe/", features = ["persistence"]}
epi = { path = "./crates/epi/" }
egui_extras = { path = "./crates/egui_extras/", features = ["image"] }
# eframe = { version =  "0.17.0", features = ["persistence"] }
# egui_extras = { version = "0.17", features = ["image"] }
image = { version = "0.24", features = ["png"] }
serde = { version = "1.0", features = ["derive"] }
js-sys = "0.3"

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["serde", "wasmbind"]

[features]
default = ["persistence", "wasmbind"]
persistence = ["eframe/persistence"]
wasmbind = ["chrono/wasmbind"]

[target.'cfg(target_os = "windows")'.dependencies]
open = "2.1"

#[target.'cfg(windows)'.build-dependencies]
#winres = "0.1"

[profile.release]
opt-level = 2 # fast and small wasm

[patch.crates-io]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
