[package]
name = "dorothy_egui"
default-run = "dorothy_egui_bin"
version = "0.0.12"
authors = ["Nadya Nayme <admin@aishitei.ru>"]
edition = "2021"
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "dorothy_egui_bin"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
csv = "1.1"
eframe = { git = "https://github.com/NadyaNayme/egui/" }
epi = { git = "https://github.com/NadyaNayme/egui/" }
egui_extras = { git = "https://github.com/NadyaNayme/egui/" }
# eframe = { version =  "0.17.0", features = ["persistence"] }
# egui_extras = { version = "0.17", features = ["image"] }
image = { version = "0.24", features = ["png"] }
serde = { version = "1.0", features = ["derive"] }
js-sys = "0.3"
format_num = "0.1"

[features]
default = ["persistence", "wasmbind"]
persistence = ["eframe/persistence"]
wasmbind = ["chrono/wasmbind"]

[target.'cfg(any(target_os = "windows", target_os = "macos", target_os = "linux"))'.dependencies.chrono]
version = "0.4"
default-features = true
features = ["serde", "wasmbind"]

[target.'cfg(any(target_family = "unix", target_family = "windows"))'.dependencies]
self_update = "0.29"

[target.'cfg(all(target_os = "windows", not(target_arch = "wasm32")))'.build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 2 # fast and small wasm

[patch.crates-io]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies.chrono]
version = "0.4"
default-features = false
features = ["serde", "wasmbind"]
